--- a/k8s-user-service.yaml
+++ b/k8s-user-service.yaml
@@ -29,4 +29,11 @@ spec:
         image: orionhank/bootu-user:latest
         ports:
         - containerPort: 8080
+        resources:
+          requests:
+            memory: "600Mi"
+            cpu: "200m"
+          limits:
+            memory: "800Mi"
+            cpu: "300m"
 
